--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     hostname: localhost
+    
+microservices:
+  payment-service:
+    endpoints:
+      endpoint:
+        uri: http://PAYMENT-SVC/payment/payForOrder
